   * Added events: turn end and turn X end_text
   * Added events: side turn end, side X turn end, side turn X end,
     and side X turn Y end
   * Added "variations" key and "@V" symbol in [terrain_graphics] (syntax is
     not final, and may change later)
   * Fixed a bug causing the PUT_TO_RECALL_LIST macro to freeze the game.
 * Miscellaneous and bug fixes:
   * Removed: statistics upload code.
   * Changed: compiler mode set to c++98
   * Optimize terrain rules which speed up cache creation and loading
   * Optimize rendering of flying units
   * Fix crash when attacking in fog (using teleport+attack to a fogged village)
   * Fixed a bug causing turn counter in the objectives dialog to duplicate when
     the objectives are viewed several times.

Version 1.9.0:
 * AI:
   * Fixed bug #15994 : Formula AI candidate actions specified in [side][ai]
     don't always work.
   * Fixed bug #16406: Broken AI of SoF 1, and improved upgrade procedure for
     old-style AI config.
 * Campaigns:
   * An Orcish Incursion:
     * Made 'Valley of Trolls' easier on the easiest difficulties.
   * Dead Water:
     * New campaign added to mainline from the Wesnoth-UMC-Dev Project's
       repository (Intermediate level, 13 scenarios)
   * Descent into Darkness:
     * 'A Small Favor' (part 1) now gives an early finish bonus.
     * Dela is no longer invulnerable in 'Alone at Last' but cannot be safely
       assassinated.
   * Eastern Invasion:
     * New (unanimated) sprites for Owaec.
     * Made it slightly easier to rescue the knights in 'Mal-Ravanal's Capital'.
     * Increased the turn limit in 'Two Paths' from 18/16/14 to 18/17/16.
   * Heir to the Throne:
     * Made 'Cliffs of Thoria' much easier.
     * Made 'Isle of the Damned' slightly easier.
   * Liberty:
     * Increased the difficulty of 'Unlawful Orders', 'The Grey Woods' and 'The
       Hunters' and 'Glory'.
   * Northern Rebirth:
     * In Showdown, you recover full gold only if Sisal survived the previous